tests/error/malformed_octal_escape.gw
#! [contains] malformed octal escape sequence
<<<"\038[31mred\033[0m">>>;
